<package format="3">
  <name>gorm_arm</name>
  <version>0.1.0</version>
  <description>
    MoveIt and servo control for the GORM arm
  </description>
  <license>MIT</license>

  <author>Jonas Thorhauge-Hansen</author>
  <maintainer email="jonas.thorhauge@gmail.com">Jonas Thorhauge-Hansen</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>annin_ar4_description</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
